<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@mipmap/bg_result"
              android:orientation="horizontal"
              android:weightSum="3">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginBottom="150dp">

        <com.makeramen.roundedimageview.RoundedImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/iv_head"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_head"
            app:riv_border_color="@android:color/transparent"
            app:riv_border_width="2dip"
            app:riv_corner_radius="30dip"
            app:riv_mutate_background="true"
            app:riv_oval="true"
            app:riv_tile_mode="clamp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/choose_image"
            android:textColor="@android:color/white"
            android:textSize="40sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:paddingTop="60dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_name"
                android:textColor="@android:color/white"
                android:textSize="40sp"/>

            <EditText
                android:id="@+id/et_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:background="@null"
                android:drawableBottom="@mipmap/et_underline"
                android:gravity="center"
                android:hint="@string/hint_name"
                android:textColor="@android:color/white"
                android:textColorHint="#d6d6d6"
                android:textSize="40sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_sex"
                android:textColor="@android:color/white"
                android:textSize="40sp"/>

            <RadioGroup
                android:id="@+id/rg_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_nan"
                    style="@style/dynamicChooserItem"
                    android:checked="true"
                    android:text="@string/sex_nan"
                    />

                <RadioButton
                    android:id="@+id/rb_nv"
                    style="@style/dynamicChooserItem"
                    android:text="@string/sex_nv"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_phone"
                android:textColor="@android:color/white"
                android:textSize="40sp"/>

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:background="@null"
                android:drawableBottom="@mipmap/et_underline"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textColorHint="#d6d6d6"
                android:textSize="40sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_birth"
                android:textColor="@android:color/white"
                android:textSize="40sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/et_year"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:background="@null"
                        android:gravity="center"
                        android:inputType="number"
                        android:textColor="@android:color/white"
                        android:textSize="30sp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date_year"
                        android:textColor="@android:color/white"
                        android:textSize="40sp"/>

                    <EditText
                        android:id="@+id/et_month"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:background="@null"
                        android:gravity="center"
                        android:inputType="number"
                        android:textColor="@android:color/white"
                        android:textSize="30sp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date_month"
                        android:textColor="@android:color/white"
                        android:textSize="40sp"/>


                    <EditText
                        android:id="@+id/et_day"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:background="@null"
                        android:gravity="center"
                        android:inputType="number"
                        android:textColor="@android:color/white"
                        android:textSize="30sp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date_day"
                        android:textColor="@android:color/white"
                        android:textSize="40sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/et_underline">

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp">

            <Button
                android:id="@+id/bt_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rb_checked"
                android:paddingBottom="10dp"
                android:paddingLeft="120dp"
                android:paddingRight="120dp"
                android:paddingTop="10dp"
                android:text="@string/button_register"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>