<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_result"
    android:orientation="vertical"
    android:weightSum="10"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingStart="150dp">

        <TextView
            android:id="@+id/tv_time1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="上午好"
            android:textColor="@android:color/white"
            android:textSize="25sp"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/iv_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_head"/>

            <TextView
                android:id="@+id/tv_time2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_toRightOf="@id/iv_head"
                android:gravity="center_vertical"
                android:text="上午好"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/ll_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toRightOf="@id/tv_time2"
                android:orientation="vertical"

                >

                <LinearLayout
                    android:id="@+id/ll_info1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zhangsan"
                        android:textColor="@android:color/white"
                        android:textSize="25sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="|"
                        android:textColor="@android:color/white"
                        android:textSize="25sp"
                        />

                    <TextView
                        android:id="@+id/tv_sex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/sex_nan"
                        android:textColor="@android:color/white"
                        android:textSize="25sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="|"
                        android:textColor="@android:color/white"
                        android:textSize="25sp"
                        />

                    <TextView
                        android:id="@+id/tv_age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/_23"
                        android:textColor="@android:color/white"
                        android:textSize="25sp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_info2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_disease"
                        android:textColor="@android:color/white"
                        android:textSize="25sp"/>

                    <TextView
                        android:id="@+id/tv_diseases"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/t1"
                        android:textColor="@android:color/white"
                        android:textSize="25sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="|"
                        android:textColor="@android:color/white"
                        android:textSize="25sp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_risk"
                        android:textColor="@android:color/white"
                        android:textSize="25sp"/>

                    <TextView
                        android:id="@+id/tv_risk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/t2"
                        android:textColor="@android:color/white"
                        android:textSize="25sp"/>
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_peiban"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="right"
                android:layout_marginRight="30dp"
                android:layout_marginStart="30dp"
                android:gravity="center"
                android:orientation="vertical"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_peiban"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/label_service"
                    android:textColor="@android:color/white"
                    android:textSize="25sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="40dp"
                android:layout_toLeftOf="@id/ll_peiban"
                android:gravity="center"
                android:orientation="vertical"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_register"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/label_register"
                    android:textColor="@android:color/white"
                    android:textSize="25sp"/>
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingBottom="50dp"
        android:paddingStart="150dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >


            <ImageView
                android:id="@+id/iv_daozhen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@mipmap/ic_daozhen"/>


            <ImageView
                android:id="@+id/iv_shipin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@mipmap/ic_shipin"/>

            <ImageView
                android:id="@+id/iv_pinggu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@mipmap/ic_pinggu"/>

            <ImageView
                android:id="@+id/iv_yaoxiang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@mipmap/ic_yaoxiang"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/iv_tizhong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_tizhong"/>

                <LinearLayout
                    android:id="@+id/ll_tizhong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@mipmap/bg_tizhong"
                    android:gravity="right"
                    android:orientation="vertical"
                    android:visibility="gone"
                    >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/iv_low"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="体重 51kg"
                        android:textColor="@android:color/white"
                        android:textSize="22sp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="BMI 23"
                        android:textColor="@android:color/white"
                        android:textSize="22sp"
                        />

                </LinearLayout>
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/iv_xueya"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_xueya"/>

                <LinearLayout
                    android:id="@+id/ll_xueya"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@mipmap/bg_xueya"
                    android:gravity="right"
                    android:orientation="vertical"
                    android:visibility="gone"
                    >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/iv_high"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="舒张压 140mmHg"
                        android:textColor="@android:color/white"
                        android:textSize="22sp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="收缩压 80mmHg"
                        android:textColor="@android:color/white"
                        android:textSize="22sp"
                        />

                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/iv_tiwen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_tiwen"/>

                <LinearLayout
                    android:id="@+id/ll_tiwen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@mipmap/bg_tiwen"
                    android:gravity="right"
                    android:orientation="vertical"
                    android:visibility="gone"
                    >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/iv_normal"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="体温 37℃"
                        android:textColor="@android:color/white"
                        android:textSize="22sp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="脉率 75（次/分钟）"
                        android:textColor="@android:color/white"
                        android:textSize="22sp"
                        />

                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/iv_xuetang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_xuetang"/>

                <LinearLayout
                    android:id="@+id/ll_xuetang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@mipmap/bg_xuetang"
                    android:gravity="right"
                    android:orientation="vertical"
                    android:visibility="gone"
                    >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/iv_low"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="体重 51kg"
                        android:textColor="@android:color/white"
                        android:textSize="22sp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="BMI 23"
                        android:textColor="@android:color/white"
                        android:textSize="22sp"
                        />

                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingBottom="50dp"
        android:paddingStart="450dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copy_right"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            />

    </LinearLayout>


</LinearLayout>
